--- a/HomeManager/MainWindow.xaml
+++ b/HomeManager/MainWindow.xaml
@@ -20,7 +20,6 @@
         <VM:clsHomeVM />
     </Window.DataContext>
 
-
     <Window.Resources>
         <DataTemplate DataType="{x:Type VM:clsPersoonViewModel}">
             <V:ucPersoon />
@@ -105,8 +104,6 @@
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
 
-
-
         <V:ucTitlePerson
             Grid.ColumnSpan="2"
             Width="120"
@@ -121,12 +118,7 @@
             Source="/Images/background.jpg"
             Stretch="Fill" />
 
-
-
-
-
         <!--#region  HamburgerMenu-->
-
         <Border
             x:Name="HamburgerMenu"
             Grid.Row="1"
@@ -157,8 +149,6 @@
                 </Grid.RowDefinitions>
 
                 <Path Style="{StaticResource myHomeButtonMenu}" />
-
-
 
                 <StackPanel
                     Grid.Row="1"
@@ -290,19 +280,10 @@
                         </StackPanel>
                     </Expander>
 
-                    <Expander Style="{StaticResource myHamburgerStickyNotes}">
-                        <Button
-                            Click="Show_StickyNotes"
-                            Content="Toon Venster"
-                            Style="{StaticResource myMenuStickyNoteColor}" />
-
-                        <!-- Colors zijn niet gevraagd
-                        <Expander IsExpanded="{Binding IsStickyNotesExpanderMenu, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Style="{StaticResource myHamburgerStickyNotes}"><StackPanel x:Name="stckStickynotes">
-                            <Button Content="Sticky notes colors" Style="{StaticResource myMenuStickyNoteColor}" />
-                        </StackPanel>
-                        -->
-
-                    </Expander>
+                    <Button
+                        Click="Show_StickyNotes"
+                        Content="Sticky Notes"
+                        Style="{StaticResource myExpanderStickyNotes}" />
                 </StackPanel>
 
                 <Button
