--- a/HomeManager/Resources/BrushesDictionary.xaml
+++ b/HomeManager/Resources/BrushesDictionary.xaml
@@ -1,27 +1,28 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <!--#region Colors & Brushes-->
-
     <Color x:Key="menuColor">#00223e</Color>
-    <Color x:Key="titleColor">#024f87</Color>
-    <Color x:Key="toolbarColor">White</Color>
-    <Color x:Key="toolbarDisabledColor">Gray</Color>
-    <Color x:Key="backgroundColor">LightGray</Color>
-    <Color x:Key="iconColor">Steelblue</Color>
-    <SolidColorBrush x:Key="myMenuIconBrush" Color="#00223e" />
-
-    <SolidColorBrush x:Key="myTitleBar" Color="#024f87" />
-    <SolidColorBrush x:Key="myMenuIcon" Color="#00223e" />
-    <SolidColorBrush x:Key="myWerkBalk" Color="White" />
-    <SolidColorBrush x:Key="myWerkBalkDisable" Color="Gray" />
-    <SolidColorBrush x:Key="myBackground" Color="LightGray" />
-    <SolidColorBrush x:Key="myDagboekButtonIconColor" Color="SteelBlue" />
-
+    <SolidColorBrush x:Key="myMenuIcon" Color="{DynamicResource menuColor}" />
+    <SolidColorBrush x:Key="myMenuIconBrush" Color="{DynamicResource menuColor}" />
     <SolidColorBrush x:Key="menuBrush" Color="{DynamicResource menuColor}" />
+
+    <Color x:Key="titleColor">#024f87</Color>
+    <SolidColorBrush x:Key="myTitleBar" Color="{DynamicResource titleColor}" />
     <SolidColorBrush x:Key="titleBrush" Color="{DynamicResource titleColor}" />
+
+    <Color x:Key="toolbarColor">White</Color>
+    <SolidColorBrush x:Key="myWerkBalk" Color="{DynamicResource toolbarColor}" />
     <SolidColorBrush x:Key="toolbarBrush" Color="{DynamicResource toolbarColor}" />
+
+    <Color x:Key="toolbarDisabledColor">Gray</Color>
+    <SolidColorBrush x:Key="myWerkBalkDisable" Color="{DynamicResource toolbarDisabledColor}" />
     <SolidColorBrush x:Key="toolbarDisabledBrush" Color="{DynamicResource toolbarDisabledColor}" />
+
+    <Color x:Key="backgroundColor">LightGray</Color>
+    <SolidColorBrush x:Key="myBackground" Color="{DynamicResource backgroundColor}" />
     <SolidColorBrush x:Key="backgroundBrush" Color="{DynamicResource backgroundColor}" />
+
+    <Color x:Key="iconColor">Steelblue</Color>
+    <SolidColorBrush x:Key="myDagboekButtonIconColor" Color="{DynamicResource iconColor}" />
     <SolidColorBrush x:Key="iconBrush" Color="{DynamicResource iconColor}" />
 
     <LinearGradientBrush x:Key="gradientBrush" StartPoint="0,0" EndPoint="0,3">
@@ -30,5 +31,9 @@
         <GradientStop Offset="1.0" Color="{DynamicResource menuColor}" />
     </LinearGradientBrush>
 
-    <!--#endregion-->
+    <SolidColorBrush x:Key="redBrush" Color="Red" />
+    <SolidColorBrush x:Key="greenBrush" Color="Green" />
+    <SolidColorBrush x:Key="blueBrush" Color="Blue" />
+    <SolidColorBrush x:Key="yellowBrush" Color="Yellow" />
+    <SolidColorBrush x:Key="orangeBrush" Color="Orange" />
 </ResourceDictionary>
