--- a/HomeManager/View/StickyNotes/StickyNotesView.xaml
+++ b/HomeManager/View/StickyNotes/StickyNotesView.xaml
@@ -2,9 +2,11 @@
     x:Class="HomeManager.View.StickyNotes.StickyNotesView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:Behaviors="clr-namespace:HomeManager.Behaviors"
     xmlns:Converters="clr-namespace:HomeManager.Converter"
     xmlns:Helpers="clr-namespace:HomeManager.Helpers"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
     xmlns:local="clr-namespace:HomeManager.View.StickyNotes"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="Sticky Notes"
@@ -75,6 +77,15 @@
             Width="75"
             Height="30"
             Margin="2.5"
+            HorizontalAlignment="Center"
+            Command="{Binding SaveNotesCommand}"
+            CommandParameter="{Binding}"
+            Content="Save All"
+            Style="{StaticResource StickyNoteButton}" />
+        <Button
+            Width="75"
+            Height="30"
+            Margin="2.5"
             HorizontalAlignment="Right"
             Command="{Binding RemoveNoteCommand}"
             CommandParameter="{Binding}"
@@ -89,7 +100,7 @@
             HorizontalContentAlignment="Stretch"
             AllowDrop="True"
             Drop="StickyNotesListView_Drop"
-            ItemsSource="{Binding MyCollection}"
+            ItemsSource="{Binding MyCollection, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
             ScrollViewer.CanContentScroll="False"
             ScrollViewer.VerticalScrollBarVisibility="Auto"
             SelectedItem="{Binding MySelectedItem, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
@@ -218,8 +229,10 @@
                                     Grid.Column="0"
                                     Margin="0"
                                     Padding="5"
-                                    Style="{StaticResource StickyNoteRichTextBox}"
-                                    ToolTip="Type text here." />
+                                    Helpers:clsRichTextBoxHelper.RtfText="{Binding Content, Mode=TwoWay}"
+                                    AcceptsReturn="True"
+                                    AcceptsTab="True"
+                                    Style="{StaticResource StickyNoteRichTextBox}" />
                                 <StackPanel
                                     Grid.Row="1"
                                     Grid.Column="0"
