--- a/HomeManager/View/Security/winNewPassWord.xaml
+++ b/HomeManager/View/Security/winNewPassWord.xaml
@@ -99,25 +99,22 @@
                         Margin="3"
                         Padding="5,0,5,0"
                         Command="{Binding cmdOpslaan}"
+                        CommandParameter="{Binding}"
                         Content="Opslaan" />
                     <Button
                         Margin="3"
                         Padding="5,0,5,0"
                         Command="{Binding cmdAnnuleer}"
+                        CommandParameter="{Binding}"
                         Content="Annuleren" />
                     <Button
                         Margin="3"
                         Padding="5,0,5,0"
                         Command="{Binding cmdClose}"
+                        CommandParameter="{Binding}"
                         Content="Sluiten" />
                 </StackPanel>
-
-
             </Grid>
-
-
         </Border>
-
-
     </Grid>
 </Window>
