--- a/HomeManager/View/Budget/ucDomiciliering.xaml
+++ b/HomeManager/View/Budget/ucDomiciliering.xaml
@@ -93,11 +93,15 @@
                     HorizontalAlignment="Left"
                     Orientation="Horizontal">
                     <TextBox
+                        x:Name="txtSearchbar"
                         Width="205"
                         Height="20"
                         Margin="5"
-                        Text="{Binding FilterTekst, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-                    <Button Command="{Binding cmdFilter}" Cursor="Hand">
+                        Text="{Binding FilterText, UpdateSourceTrigger=PropertyChanged}" />
+                    <Button
+                        Command="{Binding ClearSearchCommand}"
+                        CommandParameter="{Binding}"
+                        Cursor="Hand">
                         <Button.Template>
                             <ControlTemplate>
                                 <Border Background="{StaticResource myBackground}">
@@ -316,6 +320,7 @@
                         Width="30"
                         Height="29"
                         Command="{Binding cmdEditFrequentie}"
+                        CommandParameter="{Binding}"
                         Style="{StaticResource OpenUCButton}" />
                 </StackPanel>
                 <Label
@@ -342,6 +347,7 @@
                         Width="30"
                         Height="29"
                         Command="{Binding cmdEditBegunstigden}"
+                        CommandParameter="{Binding}"
                         Style="{StaticResource OpenUCButton}" />
                 </StackPanel>
 
@@ -370,6 +376,7 @@
                         Width="30"
                         Height="29"
                         Command="{Binding cmdEditCategorie}"
+                        CommandParameter="{Binding}"
                         Style="{StaticResource OpenUCButton}" />
                 </StackPanel>
 
